# MeowV64

./: .gitignore  .gitlab-ci.yml  .gitmodules  .scalafix.conf  .scalafmt.conf  AUTHORS  Cargo.toml  LICENSE  Multicore.anno.json  README.md  build.rs  build.sbt  build.sc
.github/workflows/: build.yml
.gitlab-ci/: id_rsa  repositories
bridge/: CMakeLists.txt  bridge.cpp  bridge.h
docker/: Dockerfile  build.sh
report/: .gitignore  .latexmkrc  presentation.tex
rust/: main.rs  mem.rs  rtl.rs
rust/cmd/: mod.rs  run.rs  test.rs
src/main/scala/: Core.scala  Main.scala
src/test/scala/: BPUTest.scala  CacheTest.scala  ExecSpec.scala  ExecTest.scala  L1ICacheTest.scala  L2CacheTest.scala  RiscvTestsSpec.scala  exec.scala
testcases/: .gitignore  Makefile
testcases/c/: fib.c
testcases/meow/: Makefile  linker.lds
testcases/meow/c/: fib.c
testcases/meow/src/: basic_paging.S  bench-loop-5.S  bench-loop-6.S  bench-ptb.S  (+18 more)
testcases/riscv-tests-isa/: rv64mi-p-access.hex  rv64mi-p-breakpoint.hex  rv64mi-p-csr.hex  rv64mi-p-illegal.hex  rv64mi-p-ma_addr.hex  rv64mi-p-ma_fetch.hex  rv64mi-p-mcsr.hex  rv64mi-p-sbreak.hex  rv64mi-p-scall.hex  rv64ui-p-add.hex  rv64ui-p-addi.hex  rv64ui-p-addiw.hex  rv64ui-p-addw.hex  rv64ui-p-and.hex  rv64ui-p-andi.hex  rv64ui-p-auipc.hex  rv64ui-p-beq.hex  rv64ui-p-bge.hex  rv64ui-p-bgeu.hex  rv64ui-p-blt.hex  rv64ui-p-bltu.hex  rv64ui-p-bne.hex  rv64ui-p-fence_i.hex  rv64ui-p-jal.hex  rv64ui-p-jalr.hex  rv64ui-p-lb.hex  rv64ui-p-lbu.hex  rv64ui-p-ld.hex  rv64ui-p-lh.hex  rv64ui-p-lhu.hex  rv64ui-p-lui.hex  rv64ui-p-lw.hex  rv64ui-p-lwu.hex  rv64ui-p-or.hex  rv64ui-p-ori.hex  rv64ui-p-sb.hex  rv64ui-p-sd.hex  rv64ui-p-sh.hex  rv64ui-p-simple.hex  rv64ui-p-sll.hex  (+20 more)
testcases/src/: branch.S  csr.S  div-special.S  fib.S  jump.S  load-store.S  op-imm.S  serial.S  write-merge.S
verilator/: .gitignore  Makefile  Makefrag  benchmark.sh  main.cpp  run.sh  test.sh
verilator/DoubleCoreDef/: Makefile
verilator/SingleCoreDef/: Makefile
(+171 files in other folders)
