[package]
name = "meowv64_test"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

[[bin]]
name = "meowv64-run"
path = "rust/main.rs"

[build-dependencies]
cmake = "0.1"
glob = "0.3"

[dependencies]
cxx = "1.0"
structopt = { version = "0.3", features = ["paw"] }
paw = "1.0"
env_logger = "0.9"
log = "0.4"
byteorder = "1.3"
anyhow = "1.0"
num_cpus = "1.13"
crossbeam-channel = "0.5"
indicatif = "0.16"
rand = "0.8.4"
rand_pcg = "0.3.1"
